--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,7 +7,7 @@
     <script th:src="@{scripts/tailwind-css.min.js}"></script>
 </head>
 <body class="bg-gray-800 min-h-screen flex flex-col">
-    <nav th:replace="~{common-fragments :: nav (${currentPage}, ${user})}"></nav>
+    <nav th:replace="~{common-fragments :: nav (${currentPage}, ${currentUser})}"></nav>
 
     <div class="flex grow flex-col">
     </div>
