--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" th:href="@{styles/styles.css}">
 </head>
 <body class="bg-gray-800 min-h-screen flex flex-col">
-    <nav th:replace="~{common-fragments :: nav (${currentPage}, ${user})}"></nav>
+    <nav th:replace="~{common-fragments :: nav (${currentPage}, ${currentUser})}"></nav>
 
     <div class="flex grow flex-col">
         <div class="flex">
