--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>About</title>
-  <script th:src="@{scripts/htmx.min.js}"></script>
-  <script th:src="@{scripts/tailwind-css.min.js}"></script>
+    <meta charset="UTF-8">
+    <title>About</title>
+    <script th:src="@{scripts/htmx.min.js}"></script>
+    <script th:src="@{scripts/tailwind-css.min.js}"></script>
 </head>
 <body class="bg-gray-800 min-h-screen flex flex-col">
 <nav th:replace="~{common-fragments :: nav (${currentPage}, ${currentUser})}"></nav>
 
-<div class="flex grow flex-col">
+<div class="flex grow flex-col px-4">
+    <div class="flex flex-row gap-4 justify-center items-center">
+        <div class="flex flex-col bg-gray-900 rounded-lg p-4">
+            <p class="text-white font-medium">Statistics</p>
+        </div>
+        <div class="flex flex-col bg-gray-900 rounded-lg p-4">
+            <p class="text-white font-medium">FITS Contributions</p>
+            <div th:each="contribution: ${contributions}" th:replace="~{admin-fragments :: fits (${contribution})}">
 
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer th:replace="~{common-fragments :: footer}"></footer>
