--- a/src/main/resources/templates/contribute-fragments.html
+++ b/src/main/resources/templates/contribute-fragments.html
@@ -101,6 +101,7 @@
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                     <input type="hidden" th:name="formNumber" th:value="${formNumber}">
                     <input th:if="${errorOccurred}" type="hidden" name="previousError" th:value="true">
+                    <input th:if="${currentUser}" type="hidden" th:name="contributorName" th:value="${currentUser}">
                 </form>
             </div>
         </div>
